apps/umami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  namespace: nori-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: umami
  template:
    metadata:
      labels:
        app: umami
    spec:
      containers:
        - name: umami
          image: docker.umami.is/umami-software/umami:postgresql-latest
          ports:
            - containerPort: 3000
