apps/umami/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami
  namespace: nori-cloud
  labels:
    app: umami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`umami.norriswu.me`)
      kind: Rule
      services:
        - name: umami
          port: 3000
